--- a/introduccion.css
+++ b/introduccion.css
@@ -9,7 +9,21 @@
 .introduccion-informacion {
   max-width: 400px;
 }
+.introduccion-informacion a {
+    background-color: var(--text-color-inverse);
+    font-size: 12px;
+    padding: 10px 20px;
+    color: white;
+    font-style: bold;
+    border-radius: 8px;
+    margin-left: 12px;
+}
 .foto {
   width:200px;
   height: 200px;
 }
+a:hover {
+    border-bottom: 0px;
+    color: var(--main-color);
+  }
+
