--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.grid-container{
+/*.grid-container{
     display: grid;
     background-color: cornsilk;
     grid-template-columns: 200px 200px 200px;
@@ -10,4 +10,4 @@
     color: black;
     border: 1px solid black;
     background-color: var(--main-color)
-}
+}*/
