--- a/fondo.css
+++ b/fondo.css
@@ -1,4 +1,15 @@
 .fondo {
   width: 100%;
   height: 1000px;
+  background-color: var(--color);
+}
+.experiencias{
+  position:absolute;
+  bottom: 1;
+  left: 0;
+  width: 100%;
+  height: 30%;
+}
+.fondobajo{
+  transform: scaleY(-1);
 }
